# python-project-83

./: Makefile  README.md  create_table.py  database.sql  pyproject.toml  setup.sfg
.github/workflows/: tests.yml
page_analyzer/: app.py  db.py
page_analyzer/templates/: futer_header.html  index.html  site.html  urls.html
tests/: test_app.py
